After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660150 - baseaudio: compiler warnings if debugging system is disabled
baseaudio: compiler warnings if debugging system is disabled
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal minor
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-26 15:35 UTC by Nicola
Modified: 2011-10-18 23:34 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2011-09-26 15:35:21 UTC
gstbaseaudiosink.c: In function ‘gst_base_audio_sink_get_alignment’:
gstbaseaudiosink.c:1371:12: error: unused variable ‘diff_s’

gstdecodebin2.c: In function ‘drain_and_switch_chains’:
gstdecodebin2.c:3109:17: warning: unused variable ‘dbin’
Comment 1 Tim-Philipp Müller 2011-09-26 23:38:01 UTC
This is presumably because you have compiled core with --disable-gst-debug? In which case I'm surprised those are the olny two warnings..
Comment 2 Nicola 2011-09-27 06:45:47 UTC
yes I compiled gstreamer with:

./configure --disable-debug --disable-examples --disable-tests --disable-gst-debug --disable-trace --disable-alloc-trace

and the plugins with:

./configure --disable-debug --disable-examples

there are only this two warnings for plugins-base and few other for -bad and -good. --disable-gst-debug produce some performance gain or do you suggest to recompile without this? I have another embedded system and I used the same configure params with an older gstreamer version (a released one maybe 0.10.34) and I had no warnings at all
Comment 3 Tim-Philipp Müller 2011-10-18 23:34:23 UTC
 commit 4e59e63ff7c3d32b2a81ec52a6825ed00471eec4
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Wed Oct 19 00:32:13 2011 +0100

    baseaudiosink: fix unused variable compiler warning if debugging in core is disabled
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660150


(decodebin2 warning should not be an issue any longer in git master)