v4l2, ximagesrc: fix some printf format compiler warnings

https://bugzilla.gnome.org/show_bug.cgi?id=660150